--- a/app/.gitignore
+++ b/app/.gitignore
@@ -12,6 +12,14 @@ dist
 dist-ssr
 *.local
 
+# TanStack Router generated files
+routeTree.gen.ts
+routeTree.gen.js
+
+# Orval generated files
+src/api/generated
+src/api/model
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
