--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "generate:api": "orval"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-router": "^1.133.13",
     "@tanstack/react-router-devtools": "^1.133.13",
     "axios": "^1.12.2",
