--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,7 @@
     "orval": "^7.13.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3",
     "vite": "^7.1.7"
   }
 }
