--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "generate:api": "orval"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-router": "^1.133.13",
