--- a/api/.env
+++ b/api/.env
@@ -7,3 +7,6 @@ USERPASS=password123
 DB_USER=snsuser
 DB_PASSWORD=password123
 DB_NAME=snsapp
+
+# Google OAuth Client ID
+GOOGLE_CLIENT_ID=59071450149-hq1ponod39ankk8tnr09q6leos4q38ih.apps.googleusercontent.com
